[gd_scene load_steps=15 format=2]

[ext_resource path="res://Pixel art/tittle screen 1080p.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Chikarego2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://MÃºsicas e FX/menu choice.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=16]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="StyleBoxTexture" id=13]

[sub_resource type="StyleBoxTexture" id=14]

[sub_resource type="StyleBoxTexture" id=15]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 581.0
margin_bottom = 363.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.8
margin_right = -104.0
margin_bottom = -146.4
rect_scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 113.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Don't Look at Me"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 113.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 113.0
margin_bottom = 77.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 113.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 15.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 91.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
focus_neighbour_top = NodePath("../../HBoxContainer3/QuitButton")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 16 )
text = "Iniciar"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 113.0
margin_bottom = 34.0

[node name="Selector" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 7.0
margin_bottom = 15.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 2 )
text = ">"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 11.0
margin_right = 91.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
focus_neighbour_bottom = NodePath("../../HBoxContainer/StartButton")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Sair"

[node name="menuChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="focus_entered" from="VBoxContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
